<resources>
    <string name="app_name">DMIPL Data Collection</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>


    <string name="app_name_logo">app_name_logo</string>
    <string name="checking_credentials">Checking Credentials</string>

    <string name="add_site_master">Add Site</string>
    <string name="list_site_master">List Site</string>
    <string name="my_site_view">Site List</string>
    <string name="my_site_view_monitor">Site List Monitor</string>
    <string name="my_profile_view">My Profile</string>
    <string name="sync_site_data">Sync Site Data</string>
    <string name="logout">Logout</string>

    <string name="logout_msg">Logging out will delete all stored content.\n\nDo you wish to continue?</string>

    <string name="sending_password">Sending password</string>
    <string name="no_internet">Please check your internet connectivity.</string>
    <string name="provide_username">Provide Username.</string>
    <string name="provide_password">Provide Password.</string>
    <string name="password_sent">Password has been sent to your registered email</string>
    <string name="could_not_recover_password">Couldn\'t recover your password. Please try later.</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="error_in_saving_data">Error in saving data</string>
    <string name="error_in_sending_data">Error in sending data</string>
    <string name="email_to_get_password">Please enter the registered email to recover the password.</string>
    <string name="text_location">Location</string>
    <string name="media_owner">Media Owner</string>
    <string name="locality">Locality</string>
    <string name="landmarks">Landmarks</string>
    <string name="site_facing">Site Facing</string>
    <string name="site_type">Site Type</string>
    <string name="illumination_status">Illumination Status</string>
    <string name="side_of_road">Side Of Road</string>
    <string name="fill_your_information">FILL YOUR INFORMATION</string>
    <string name="next">NEXT</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fetching_data">Fetching Data</string>
    <string name="sending_data">Sending Image</string>
    <string name="site_angle">Site Angle</string>
    <string name="site_id">Site Id</string>
    <string name="uid">UID</string>
    <string name="site_size">Site Size</string>
    <string name="lighting_type">Lighting Type</string>
    <string name="site_position">Site Position</string>
    <string name="site_positionII">Site Position II</string>
    <string name="license">License</string>
    <string name="no_media_data_found">No media owner data found.</string>
    <string name="no_site_facing_found">No site facing data found.</string>
    <string name="no_site_type_found">No site type data found.</string>
    <string name="no_lighting_type_found">No lighting type data found.</string>
    <string name="no_site_position_found">No site position data found.</string>
    <string name="road_direction">Road Direction</string>
    <string name="facing_traffic">Facing Traffic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="permission">To view data allow app to write system settings.</string>
    <string name="go_to_permission">Go to Permissions to Grant Camera and Storage</string>
    <string name="storage_permission_required">Storage Permission Required</string>
    <string name="permission_required">Permission Required For This Functionality</string>
    <string name="show_external_setting">Show External settings?</string>
    <string name="grant_storage">Go to Permissions to Grant Storage</string>
    <string name="gallery_permission_cancel">Permission Canceled, Your application cannot access GALLERY</string>
    <string name="camera_permission_decline">Permission Canceled, Your application cannot access CAMERA</string>
    <string name="location_permission_decline">Permission Canceled, Your application cannot access LOCATION</string>


    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    ///google maps key
    <string name="map_api_key">AIzaSyBavgAYiIH3_OzLC9PStUBb3yQa8CPemoQ</string>
    <string name="close">Close</string>
    <string name="logo_splash">logo_splash</string>
    <string name="please_add_one_image">Please upload at-least one site image.</string>
    <string name="site_view">SITE VIEW</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="upload_site_image">Upload site image</string>
    <string name="successfully_saved">Successfully saved</string>
    <string name="please_capture_image">Please capture image.</string>
    <string name="upload_image_internet_availalbel">Image will upload when internet available.</string>
    <string name="please_be_in_range">Please be in range for capture.</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="pincode">Pincode</string>
    <string name="led">LED</string>
    <string name="lit">lit</string>
    <string name="non_lit">Non-lit</string>


</resources>
