<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/mSvContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_15">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_location"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtTextLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"

                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputLocality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/locality"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtInputLocality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtSiteType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/site_type"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtSiteType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputSitePosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/site_position"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtSitePosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputSitePositionII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/site_positionII"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtSitePositionII"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputLandmarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/landmarks"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtInputLandmarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputSiteAngle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/site_angle"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtInputSiteAngle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputFacingTraffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/facing_traffic"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtFacingTraffic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|start"
                    android:paddingLeft="@dimen/dp_5"
                    android:text="@string/side_of_road"
                    android:textColor="@color/stoke_color"
                    android:textSize="@dimen/sp_15" />

                <RadioGroup
                    android:id="@+id/rdgSideOfRoad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdbLeft"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/left"
                        android:textSize="@dimen/sp_16" />

                    <RadioButton
                        android:id="@+id/rdbRight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/right"
                        android:textSize="@dimen/sp_16" />

                </RadioGroup>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtPincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/pincode"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtPincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|start"
                    android:paddingLeft="@dimen/dp_5"
                    android:text="@string/illumination_status"
                    android:textColor="@color/stoke_color"
                    android:textSize="@dimen/sp_15" />

                <RadioGroup
                    android:id="@+id/rdgIllumintaioStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdbYes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/lit"
                        android:textSize="@dimen/sp_16" />

                    <RadioButton
                        android:id="@+id/rdbNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/non_lit"
                        android:textSize="@dimen/sp_16" />

                    <RadioButton
                        android:id="@+id/rdbLed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/led"
                        android:textSize="@dimen/sp_16" />

                </RadioGroup>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputLightType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/lighting_type"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtInputLightType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputSiteSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/site_size"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtInputSiteSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtInputLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/license"
                android:textColorHint="@color/stoke_color">

                <EditText
                    android:id="@+id/edtInputLicense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16" />

            </android.support.design.widget.TextInputLayout>

            <ridersadvisor.com.customViews.TextViewCalibriRegular
                android:id="@+id/txtNext"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/next"
                android:textColor="@drawable/textview_selector"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>